--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Leanring the basics of HTML</h1>
     <h2> What have you learned?</h2>
     <p>what elements and tags are</p>
-    <p>
-        <b>the</b></p>
+    <p><b>the</b></p>
     <p><i>definition</i></p>
     <p>of</p>
     <p>block</p>
@@ -23,5 +22,8 @@
     </div>
     <button>inline</button>
     <button>elements</button>
+    <div>
+        <a href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing " target="_blank">My notes</a>
+    </div>
 </body>
 </html>
