creating another page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Learning</title>
 </head>
 <body>
-    <h1>Leanring the basics of HTML</h1>
+    <h1>Learning the basics of HTML</h1>
     <h2> What have you learned?</h2>
     <p>what elements and tags are</p>
     <p><b>the</b></p>
@@ -25,5 +25,6 @@
     <div>
         <a href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing " target="_blank">My notes</a>
     </div>
+    <a href="/dashboard.html">dashboard</a>
 </body>
 </html>
