--- a/dashboard.html
+++ b/dashboard.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1><u>Dashboard</u></h1>
     <div>
-        <a href="/index.html"> back</a>
+      <a href="/index.html"> back</a>
     </div>
     <h2>Everything i learned today</h2>
-    <ul> 
-        <li> </li>
-        <li> </li>
-        <li> </li>
+    <ul>
+      <li>the difference between block and inline level elements</li>
+      <li>the div tag</li>
+      <li>all 1-6 heading tags</li>
+      <li>creating anchors to open a new link</li>
+      <li>opening a new tab for the anchored link</li>
+      <li>basic text editing such as bold, underline, italics</li>
+      <li>unordered and ordered lists</li>
+      <li>basic text editing such as bold, underline, italics</li>
     </ul>
-</body>
+    <h2>Plan for the next two months</h2>
+    <ol>
+        <li>Complete minimum two frontend videos a day</li>
+        <li>Create a complex and aesthetically pleasing profile</li>
+        <li>Learn javascript and css</li>
+        <li>Study for interviews</li>
+        <li>Apply for junior positions before uni semester</li>
+    </ol>
+  </body>
 </html>
