--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Learning the basics of HTML</h1>
-    <h2> What have you learned?</h2>
+    <h2>What have you learned?</h2>
     <p>what elements and tags are</p>
     <p><b>the</b></p>
     <p><i>definition</i></p>
@@ -17,14 +17,18 @@
     <p>elements</p>
     <button>the</button>
     <div>
-        <button>definition</button>
-        <button>of</button>
+      <button>definition</button>
+      <button>of</button>
     </div>
     <button>inline</button>
     <button>elements</button>
     <div>
-        <a href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing " target="_blank">My notes</a>
+      <a
+        href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing "
+        target="_blank"
+        >My notes</a
+      >
     </div>
     <a href="/dashboard.html">dashboard</a>
-</body>
+  </body>
 </html>
