creating login page

--- a/index.html
+++ b/index.html
@@ -7,14 +7,30 @@
     <title>Learning</title>
   </head>
   <body>
-    <h1>Learning the basics of HTML</h1>
+      <nav>
+        <h1><u>Learning the basics of HTML</h1></u>
+        <a href="/dashboard.html">dashboard</a>
+        <a href="/login.html">login page</a>
+        <div>
+            <a
+              href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing "
+              target="_blank"
+              >My notes</a
+            >
+          </div>
+      </nav>
+      <main>
+         
     <h2>What have you learned?</h2>
+    <section>
     <p>what elements and tags are</p>
     <p><b>the</b></p>
     <p><i>definition</i></p>
     <p>of</p>
     <p>block</p>
     <p>elements</p>
+</section>
+<section>
     <button>the</button>
     <div>
       <button>definition</button>
@@ -22,13 +38,8 @@
     </div>
     <button>inline</button>
     <button>elements</button>
-    <div>
-      <a
-        href="https://docs.google.com/document/d/16Q_hCzQGgQ9CbUWd4DqkDLoER1uX1DYbWzKV7AHsTLk/edit?usp=sharing "
-        target="_blank"
-        >My notes</a
-      >
-    </div>
-    <a href="/dashboard.html">dashboard</a>
+</section>
+<footer>Copyright terms and conditions</footer>
+</main>
   </body>
 </html>
