developing login page

--- a/login.html
+++ b/login.html
@@ -11,5 +11,30 @@
       <h1>LOGIN</h1>
       <a href="/index.html">back</a>
     </nav>
+    <main>
+      <form>
+        <div>
+          <label for="">Email:</label>
+          <input type="email" required />
+          <hr>
+        </div>
+        <div>
+          <label for="">Password:</label>
+          <input type="password" required />
+          <hr>
+        </div>
+        <div>
+          <label for="">Age:</label>
+          <input type="number" required/>
+          <hr>
+        </div>
+        <div>
+          <label for="">Date:</label>
+          <input type="date" required/>
+          <hr>
+        </div>
+        <button>Submit</button>
+      </form>
+    </main>
   </body>
 </html>
